--- a/ContosoAdsWeb/Views/Home/Index.cshtml
+++ b/ContosoAdsWeb/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="jumbotron">
-    <h1>This is a giraffe app</h1>
+    <h1>This is a giraffe spanking app</h1>
 </div>
 <div class="row">
     <div class="col-md-12">
